--- a/content/docs/components/drawer/usage.mdx
+++ b/content/docs/components/drawer/usage.mdx
@@ -1,4 +1,6 @@
 ---
+id: drawer
+category: overlay
 title: Drawer
 package: "@nature-ui/drawer"
 description:
@@ -6,10 +8,6 @@ description:
   It can be useful when you need users to complete a task or view some details
   without leaving the current page.
 ---
-
-The `Drawer` component is a panel that slides out from the edge of the screen.
-It can be useful when you need users to complete a task or view some details
-without leaving the current page.
 
 ## Import
 
