#73 fix description popover-component

--- a/content/docs/components/popover/usage.mdx
+++ b/content/docs/components/popover/usage.mdx
@@ -1,13 +1,11 @@
 ---
-id: Popover
+id: popover
 category: overlay
 title: Popover
 package: "@nature-ui/popover"
-description: Popover is a non-modal dialog that floats around a trigger
----
-
-It is used to display contextual information to the user, and should be paired with a
+description: Popover is a non-modal dialog that floats around a trigger. It is used to display contextual information to the user, and should be paired with a
 clickable trigger element.
+---
 
 `Popover` is built on top of the [Popper.js](https://popper.js.org/) library,
 and composes the `Popper` component.
