--- a/content/docs/components/checkbox/usage.mdx
+++ b/content/docs/components/checkbox/usage.mdx
@@ -45,10 +45,10 @@ You can override the color of the `Checkbox` to any color key specified in
 
 ```jsx
 <Stack spacing={10} row>
-  <Checkbox color='bg-purple-500' defaultIsChecked>
+  <Checkbox color='bg-purple-500 hover:bg-purple-700' defaultIsChecked>
     Checkbox
   </Checkbox>
-  <Checkbox color='bg-green-500' defaultIsChecked>
+  <Checkbox color='bg-green-500 hover:bg-green-700' defaultIsChecked>
     Checkbox
   </Checkbox>
 </Stack>
@@ -61,13 +61,13 @@ Pass the `size` prop to change the size of the `Checkbox`. Values can be either
 
 ```jsx
 <Stack spacing={10} row>
-  <Checkbox size='sm' color='bg-purple-500'>
+  <Checkbox size='sm' color='bg-purple-500 hover:bg-purple-700'>
     Checkbox
   </Checkbox>
-  <Checkbox size='md' color='bg-green-500' defaultIsChecked>
+  <Checkbox size='md' color='bg-green-500 hover:bg-purple-700' defaultIsChecked>
     Checkbox
   </Checkbox>
-  <Checkbox size='lg' color='bg-orange-500' defaultIsChecked>
+  <Checkbox size='lg' color='bg-orange-500 hover:bg-orange-700' defaultIsChecked>
     Checkbox
   </Checkbox>
 </Stack>
@@ -144,7 +144,7 @@ props to each. See the props table at the bottom of this page for a list of the
 shared styling props.
 
 ```jsx
-<CheckboxGroup color='bg-green-600' defaultValue={['naruto', 'kakashi']}>
+<CheckboxGroup color='bg-green-600 hover:bg-green-700' defaultValue={['naruto', 'kakashi']}>
   <Stack row>
     <Checkbox value='naruto'>Naruto</Checkbox>
     <Checkbox value='sasuke'>Sasuke</Checkbox>
