updated color properties

--- a/content/docs/components/checkbox/usage.mdx
+++ b/content/docs/components/checkbox/usage.mdx
@@ -64,7 +64,7 @@ Pass the `size` prop to change the size of the `Checkbox`. Values can be either
   <Checkbox size='sm' color='bg-purple-500 hover:bg-purple-700'>
     Checkbox
   </Checkbox>
-  <Checkbox size='md' color='bg-green-500 hover:bg-purple-700' defaultIsChecked>
+  <Checkbox size='md' color='bg-green-500 hover:bg-green-700' defaultIsChecked>
     Checkbox
   </Checkbox>
   <Checkbox size='lg' color='bg-orange-500 hover:bg-orange-700' defaultIsChecked>
