--- a/content/docs/components/button/usage.mdx
+++ b/content/docs/components/button/usage.mdx
@@ -42,25 +42,14 @@ Use the `size` prop to change the size of the button. You can set the value to
 
 ### Button variants
 
-Use the `variant` prop to change the visual style of the Button. You can set the
-value to either `solid`, `ghost`, `outline`, or `link`.
-
-> Use `text-[color]` for `outline` and `ghost` variants
-
 ```jsx
 <Stack row spacing="1rem" className="items-center">
-  <Button className="bg-purple-500" variant="solid">
-    Button
-  </Button>
-  <Button className="text-purple-500" variant="outline">
-    Button
-  </Button>
-  <Button className="text-purple-500" variant="ghost">
-    Button
-  </Button>
-  <Button className="bg-purple-500" variant="link">
-    Button
-  </Button>
+  {/* Solid (Default) variant */}
+  <Button className="bg-purple-500">Button</Button>
+  {/* Outline variant */}
+  <Button className="text-purple-500 border border-purple-500">Button</Button>
+  {/* Ghost variant */}
+  <Button className="text-purple-500">Button</Button>
 </Stack>
 ```
 
@@ -74,13 +63,12 @@ and `RightIcon` props respectively.
 
 ```jsx
 <Stack row spacing="1rem">
-  <Button leftIcon={<EmailIcon />} className="bg-teal-500" variant="solid">
+  <Button leftIcon={<EmailIcon />} className="bg-teal-500">
     Email
   </Button>
   <Button
     rightIcon={<ArrowForwardIcon />}
-    className="text-teal-500"
-    variant="outline"
+    className="text-teal-500 border border-teal-500"
   >
     Call us
   </Button>
@@ -97,10 +85,13 @@ You can also use icons from popular libraries like
 // import { MdBuild , MdCall } from "react-icons/md"
 
 <Stack row spacing="1rem">
-  <Button leftIcon={<MdBuild />} className="bg-pink-500" variant="solid">
+  <Button leftIcon={<MdBuild />} className="bg-pink-500">
     Settings
   </Button>
-  <Button rightIcon={<MdCall />} className="bg-blue-500" variant="outline">
+  <Button
+    rightIcon={<MdCall />}
+    className="text-blue-500 border-blue-500 border"
+  >
     Call us
   </Button>
 </Stack>
@@ -115,14 +106,13 @@ You can also pass the `loadingText` prop to show a spinner and the loading text.
 
 ```jsx
 <Stack row spacing="1rem">
-  <Button isLoading className="bg-purple-500" variant="solid">
+  <Button isLoading className="bg-purple-500">
     Email
   </Button>
   <Button
     isLoading
     loadingText="Submitting"
-    className="bg-purple-500"
-    variant="outline"
+    className="text-purple-500 border border-purple-500"
   >
     Submit
   </Button>
@@ -136,7 +126,7 @@ You can also pass the `loadingText` prop to show a spinner and the loading text.
 
 ## Composition
 
-All props you pass (`variant`, `color`, etc.) are converted to style props. This
+All props you pass (`size`, `color`, etc.) are converted to style props. This
 means you can override any style of the Button with custom `tailwindcss` classes
 or the emotion `css` prop.
 
@@ -160,15 +150,14 @@ or the emotion `css` prop.
 Button composes the `Box` component so you can pass all props for `Box`. These
 are props specific to the Button component.
 
-| Name          | Type                                          | Default | Description                                                                                               |
-| ------------- | --------------------------------------------- | ------- | --------------------------------------------------------------------------------------------------------- |
-| `aria-label`  | `string`                                      |         | An accessible label for the button, useful when you render only an icon in the button                     |
-| `color`       | `string`                                      | `blue`  | The color scheme of the button. Use the colors in `theme.colors` that have `100` - `900` values           |
-| `leftIcon`    | `ReactElement`                                |         | The left icon element to use in the button                                                                |
-| `rightIcon`   | `ReactElement`                                |         | The right icon element to use in the button                                                               |
-| `spinner`     | `ReactElement`                                |         | The spinner element to use when `isLoading` is set to `true`                                              |
-| `variant`     | `outline`, `ghost`, `none` , `link` , `solid` | `solid` | The variant of the button style to use.                                                                   |
-| `isDisabled`  | `boolean`                                     | `false` | If `true`, the button will be disabled.                                                                   |
-| `isLoading`   | `boolean`                                     | `false` | If `true`, the button will show a spinner.                                                                |
-| `loadingText` | `string`                                      |         | The label to show in the button when `isLoading` is true. If no text is passed, it only shows the spinner |
-| `size`        | `sm`, `md`, `lg`                              | `md`    | The size of the button.                                                                                   |
+| Name          | Type             | Default | Description                                                                                               |
+| ------------- | ---------------- | ------- | --------------------------------------------------------------------------------------------------------- |
+| `aria-label`  | `string`         |         | An accessible label for the button, useful when you render only an icon in the button                     |
+| `color`       | `string`         | `blue`  | The color scheme of the button. Use the colors in `theme.colors` that have `100` - `900` values           |
+| `leftIcon`    | `ReactElement`   |         | The left icon element to use in the button                                                                |
+| `rightIcon`   | `ReactElement`   |         | The right icon element to use in the button                                                               |
+| `spinner`     | `ReactElement`   |         | The spinner element to use when `isLoading` is set to `true`                                              |
+| `isDisabled`  | `boolean`        | `false` | If `true`, the button will be disabled.                                                                   |
+| `isLoading`   | `boolean`        | `false` | If `true`, the button will show a spinner.                                                                |
+| `loadingText` | `string`         |         | The label to show in the button when `isLoading` is true. If no text is passed, it only shows the spinner |
+| `size`        | `sm`, `md`, `lg` | `md`    | The size of the button.                                                                                   |
