#81 form-control, radio

--- a/content/docs/components/form-control/usage.mdx
+++ b/content/docs/components/form-control/usage.mdx
@@ -55,9 +55,7 @@ By passing the `isRequired` props, the `Input` field has `aria-required` set to
 
 ```jsx
 <FormControl id="first-name" isRequired>
-  <FormLabel>
-    First name <RequiredIndicator />
-  </FormLabel>
+  <FormLabel>First name</FormLabel>
   <Input placeholder="First name" />
 </FormControl>
 ```
@@ -68,7 +66,7 @@ By passing the `isRequired` props, the `Input` field has `aria-required` set to
 <FormControl id="country">
   <FormLabel>Country</FormLabel>
   <select placeholder="Select country">
-    <option>United Arab Emirates</option>
+    <option>Netherlands</option>
     <option>Nigeria</option>
   </select>
 </FormControl>
