--- a/content/docs/components/spinner/usage.mdx
+++ b/content/docs/components/spinner/usage.mdx
@@ -23,7 +23,7 @@ import { Spinner } from "@nature-ui/core";
 ### Spinner with Color
 
 ```jsx
-<Spinner color="red-500" />
+<Spinner className="text-red-500" />
 ```
 
 ### Spinner with different size
@@ -42,7 +42,7 @@ import { Spinner } from "@nature-ui/core";
 <Spinner
   thickness="4px"
   speed="0.65s"
-  color="blue-500"
+  className="text-blue-500"
   size="3rem"
   emptyColor="var(--primary-200)"
 />
