--- a/content/docs/components/visually-hidden/usage.mdx
+++ b/content/docs/components/visually-hidden/usage.mdx
@@ -24,7 +24,7 @@ function Example() {
   return (
     <Button>
       <VisuallyHidden>Checkmark</VisuallyHidden>
-      <CheckIcon />
+      <CheckIcon color="red" />
     </Button>
   );
 }
